consertando projeto reativo